[tool.poetry]
name = "langsmith-101"
version = "0.1.0"
description = ""
authors = ["Hadi2525 <h1rouhani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.24"
beautifulsoup4 = "^4.12.3"
ragas = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
